# job-application-agent

./: .gitignore
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2bf94408b59b_create_candidate_profiles_table.py  2dba99af9183_create_job_requirements_table.py  6dc941986ae8_create_job_listings_table.py  a1c414507793_create_match_scores_table.py  b39a4a8777dc_create_cv_profiles_table.py
backend/app/: main.py
backend/app/agents/: cv_profile_extraction_agent.py  job_requirement_extraction_agent.py
backend/app/api/: cv_profiles.py  health.py  job_listings.py  match_scores.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  candidate_profile.py  cv_profile.py  job_listing.py  job_requirement.py  match_score.py
backend/app/schemas/: application_advice.py  candidate_profile.py  cv_profile.py  job_listing.py  job_requirements.py  match_score.py  tailored_cv_draft.py
backend/app/services/: application_advice_service.py  candidate_profile_service.py  cv_profile_service.py  cv_text_extraction_service.py  job_listing_service.py  job_requirement_service.py  match_score_service.py  (+3 more)
backend/tests/: test_application_advice.py  test_candidate_profile_service.py  test_config.py  test_cv_profile_extraction_agent.py  test_cv_profile_upload.py  test_cv_profiles.py  test_db_health.py  test_health.py  test_job_listings.py  test_job_requirement_extraction_agent.py  test_job_requirement_service.py  test_match_scores.py  test_match_scores_from_cv_and_job.py  test_match_scoring_service.py  test_tailored_cv_draft.py
(+1 files in other folders)
